[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "case_two"
path = "src/aggregator_case_two.rs"

#[[bin]]
#name = "aggregator_demo"
#path = "src/aggregator_demo.rs"
#
[[bin]]
name = "case_one"
path = "src/case_one.rs"

[[bin]]
name = "router"
path = "src/router.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28", features = ["cmake-build"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }
thread_local = "1.1"
serde = "1.0.144"
chrono = "0.4.22"
strum_macros = "0.24.3"
strum = "0.24.1"
serde_json = "1.0.85"
reqwest = "0.11.6"
rand = "0.8.4"
